--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ html {
   float: left;
   width: auto;
   height: 100%;
-  background-color: green;
+  background-color: lightgreen;
   margin-right: 20px;
 }
 body {
